--- a/deploy/catalog_resources/community/7.9/kiecloud-operator.7.9.0.clusterserviceversion.yaml
+++ b/deploy/catalog_resources/community/7.9/kiecloud-operator.7.9.0.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "false"
     containerImage: quay.io/kiegroup/kie-cloud-operator:7.9.0
-    createdAt: "2020-08-18 08:45:47"
+    createdAt: "2020-08-19 19:31:51"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat Decision Manager environments.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
     repository: https://github.com/kiegroup/kie-cloud-operator
@@ -191,7 +191,7 @@ spec:
                 - name: POSTGRESQL_PROXY_IMAGE_7.9.0
                   value: registry.redhat.io/rhscl/postgresql-10-rhel7:latest
                 - name: DATAGRID_IMAGE_7.9.0
-                  value: registry.redhat.io/jboss-datagrid-7/datagrid73-openshift:1.5
+                  value: registry.redhat.io/jboss-datagrid-7/datagrid73-openshift:1.6
                 - name: BROKER_IMAGE_7.9.0
                   value: registry.redhat.io/amq7/amq-broker:7.6
                 - name: DM_KIESERVER_IMAGE_7.8.1
@@ -522,6 +522,8 @@ spec:
   - image: registry.redhat.io/jboss-datagrid-7/datagrid73-openshift:1.3
     name: datagrid73-openshift
   - image: registry.redhat.io/jboss-datagrid-7/datagrid73-openshift:1.5
+    name: datagrid73-openshift
+  - image: registry.redhat.io/jboss-datagrid-7/datagrid73-openshift:1.6
     name: datagrid73-openshift
   - image: registry.redhat.io/amq7/amq-broker:7.5
     name: amq-broker
