fix imageStream creation to include imageContext changes
Signed-off-by: tchughesiv <tchughesiv@gmail.com>

--- a/deploy/crds/kieapp.crd.yaml
+++ b/deploy/crds/kieapp.crd.yaml
@@ -494,13 +494,16 @@ spec:
                             type: string
                         type: object
                       image:
-                        description: The image to use
+                        description: The image to use e.g. rhpam-<app>-rhel8, this
+                          param is optional for custom image.
                         type: string
                       imageContext:
-                        description: The image context to use
+                        description: The image context to use  e.g. rhpam-7, this
+                          param is optional for custom image.
                         type: string
                       imageTag:
-                        description: The image tag to use
+                        description: The image tag to use e.g. 7.9.0, this param is
+                          optional for custom image.
                         type: string
                       jvm:
                         description: JvmObject JVM specification to be used by the
@@ -739,13 +742,17 @@ spec:
                         type: object
                       image:
                         description: The image to use for Process Instance Migration
+                          e.g. rhpam-process-migration-rhel8, this param is optional
+                          for custom image.
                         type: string
                       imageContext:
                         description: The image context to use for Process Instance
-                          Migration
+                          Migration  e.g. rhpam-7, this param is optional for custom
+                          image.
                         type: string
                       imageTag:
-                        description: The image tag to use for Process Instance Migration.
+                        description: The image tag to use for Process Instance Migration
+                          e.g. 7.9.0, this param is optional for custom image.
                         type: string
                     type: object
                   servers:
@@ -1127,13 +1134,16 @@ spec:
                           description: Server ID
                           type: string
                         image:
-                          description: The image to use
+                          description: The image to use e.g. rhpam-<app>-rhel8, this
+                            param is optional for custom image.
                           type: string
                         imageContext:
-                          description: The image context to use
+                          description: The image context to use  e.g. rhpam-7, this
+                            param is optional for custom image.
                           type: string
                         imageTag:
-                          description: The image tag to use
+                          description: The image tag to use e.g. 7.9.0, this param
+                            is optional for custom image.
                           type: string
                         jms:
                           description: KieAppJmsObject messaging specification to
@@ -1497,13 +1507,16 @@ spec:
                           type: object
                         type: array
                       image:
-                        description: The image to use
+                        description: The image to use e.g. rhpam-<app>-rhel8, this
+                          param is optional for custom image.
                         type: string
                       imageContext:
-                        description: The image context to use
+                        description: The image context to use  e.g. rhpam-7, this
+                          param is optional for custom image.
                         type: string
                       imageTag:
-                        description: The image tag to use
+                        description: The image tag to use e.g. 7.9.0, this param is
+                          optional for custom image.
                         type: string
                       keystoreSecret:
                         description: Keystore secret name
@@ -2048,13 +2061,16 @@ spec:
                                 type: string
                             type: object
                           image:
-                            description: The image to use
+                            description: The image to use e.g. rhpam-<app>-rhel8,
+                              this param is optional for custom image.
                             type: string
                           imageContext:
-                            description: The image context to use
+                            description: The image context to use  e.g. rhpam-7, this
+                              param is optional for custom image.
                             type: string
                           imageTag:
-                            description: The image tag to use
+                            description: The image tag to use e.g. 7.9.0, this param
+                              is optional for custom image.
                             type: string
                           jvm:
                             description: JvmObject JVM specification to be used by
@@ -2295,14 +2311,18 @@ spec:
                             type: object
                           image:
                             description: The image to use for Process Instance Migration
+                              e.g. rhpam-process-migration-rhel8, this param is optional
+                              for custom image.
                             type: string
                           imageContext:
                             description: The image context to use for Process Instance
-                              Migration
+                              Migration  e.g. rhpam-7, this param is optional for
+                              custom image.
                             type: string
                           imageTag:
                             description: The image tag to use for Process Instance
-                              Migration.
+                              Migration e.g. 7.9.0, this param is optional for custom
+                              image.
                             type: string
                         type: object
                       servers:
@@ -2699,13 +2719,16 @@ spec:
                               description: Server ID
                               type: string
                             image:
-                              description: The image to use
+                              description: The image to use e.g. rhpam-<app>-rhel8,
+                                this param is optional for custom image.
                               type: string
                             imageContext:
-                              description: The image context to use
+                              description: The image context to use  e.g. rhpam-7,
+                                this param is optional for custom image.
                               type: string
                             imageTag:
-                              description: The image tag to use
+                              description: The image tag to use e.g. 7.9.0, this param
+                                is optional for custom image.
                               type: string
                             jms:
                               description: KieAppJmsObject messaging specification
@@ -3081,13 +3104,16 @@ spec:
                               type: object
                             type: array
                           image:
-                            description: The image to use
+                            description: The image to use e.g. rhpam-<app>-rhel8,
+                              this param is optional for custom image.
                             type: string
                           imageContext:
-                            description: The image context to use
+                            description: The image context to use  e.g. rhpam-7, this
+                              param is optional for custom image.
                             type: string
                           imageTag:
-                            description: The image tag to use
+                            description: The image tag to use e.g. 7.9.0, this param
+                              is optional for custom image.
                             type: string
                           keystoreSecret:
                             description: Keystore secret name
