--- a/deploy/olm-catalog/prod/7.9.0/manifests/businessautomation-operator.7.9.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/prod/7.9.0/manifests/businessautomation-operator.7.9.0.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "true"
     containerImage: registry.redhat.io/rhpam-7/rhpam-rhel8-operator:7.9.0
-    createdAt: "2020-09-14 11:44:27"
+    createdAt: "2020-09-17 14:51:02"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat Decision Manager environments.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
     repository: https://github.com/kiegroup/kie-cloud-operator
@@ -364,7 +364,9 @@ spec:
         - apiGroups:
           - image.openshift.io
           resources:
+          - images
           - imagestreams
+          - imagestreamimages
           - imagestreamtags
           verbs:
           - create
@@ -401,6 +403,7 @@ spec:
           - operators.coreos.com
           resources:
           - clusterserviceversions
+          - subscriptions
           verbs:
           - get
           - list
