--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: kie-cloud-operator
+  name: business-automation-operator
 rules:
 - apiGroups:
   - ""
@@ -94,7 +94,9 @@ rules:
 - apiGroups:
   - image.openshift.io
   resources:
+  - images
   - imagestreams
+  - imagestreamimages
   - imagestreamtags
   verbs:
   - create
@@ -131,6 +133,7 @@ rules:
   - operators.coreos.com
   resources:
   - clusterserviceversions
+  - subscriptions
   verbs:
   - get
   - list
