--- a/image-bundle.yaml
+++ b/image-bundle.yaml
@@ -39,7 +39,7 @@ labels:
     value: v4.5,v4.6
 modules:
   repositories:
-    - path: deploy/olm-catalog/businessautomation-operator
+    - path: deploy/olm-catalog/prod
       name: olm-catalog
   install:
     - name: olm-catalog
