--- a/deploy/olm-catalog/dev/7.9.0/manifests/businessautomation-operator.7.9.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/dev/7.9.0/manifests/businessautomation-operator.7.9.0.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "false"
     containerImage: quay.io/kiegroup/kie-cloud-operator:7.9.0
-    createdAt: "2020-09-22 11:50:50"
+    createdAt: "2020-09-25 15:05:21"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat Decision Manager environments.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
     repository: https://github.com/kiegroup/kie-cloud-operator
@@ -17,7 +17,7 @@ metadata:
     operator-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: businessautomation-operator.7.9.0-dev-x7zlgfdt6r
+  name: businessautomation-operator.7.9.0-dev-p9f5jmzdd2
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -83,6 +83,16 @@ spec:
         x-descriptors:
         - urn:alm:descriptor:com.tectonic.ui:label
       statusDescriptors:
+      - description: The admin user for BC console.
+        displayName: Business/Decision Central Admin User
+        path: applied.commonConfig.adminUser
+        x-descriptors:
+        - urn:alm:descriptor:com.tectonic.ui:password
+      - description: The admin password for BC console.
+        displayName: Business/Decision Central Admin Password
+        path: applied.commonConfig.adminPassword
+        x-descriptors:
+        - urn:alm:descriptor:com.tectonic.ui:password
       - description: Product version installed.
         displayName: Version
         path: version
@@ -444,7 +454,7 @@ spec:
   - operator
   labels:
     alm-owner-businessautomation: businessautomation-operator
-    operated-by: businessautomation-operator.7.9.0-dev-x7zlgfdt6r
+    operated-by: businessautomation-operator.7.9.0-dev-p9f5jmzdd2
   links:
   - name: Product Page
     url: https://access.redhat.com/products/red-hat-process-automation-manager
@@ -547,5 +557,5 @@ spec:
   selector:
     matchLabels:
       alm-owner-businessautomation: businessautomation-operator
-      operated-by: businessautomation-operator.7.9.0-dev-x7zlgfdt6r
-  version: 7.9.0+x7zlgfdt6r
+      operated-by: businessautomation-operator.7.9.0-dev-p9f5jmzdd2
+  version: 7.9.0+p9f5jmzdd2
