--- a/deploy/olm-catalog/prod/7.9.0/manifests/businessautomation-operator.7.9.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/prod/7.9.0/manifests/businessautomation-operator.7.9.0.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "true"
     containerImage: registry.redhat.io/rhpam-7/rhpam-rhel8-operator:7.9.0
-    createdAt: "2020-09-22 11:50:50"
+    createdAt: "2020-09-25 15:05:21"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat Decision Manager environments.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
     repository: https://github.com/kiegroup/kie-cloud-operator
@@ -83,6 +83,16 @@ spec:
         x-descriptors:
         - urn:alm:descriptor:com.tectonic.ui:label
       statusDescriptors:
+      - description: The admin user for BC console.
+        displayName: Business/Decision Central Admin User
+        path: applied.commonConfig.adminUser
+        x-descriptors:
+        - urn:alm:descriptor:com.tectonic.ui:password
+      - description: The admin password for BC console.
+        displayName: Business/Decision Central Admin Password
+        path: applied.commonConfig.adminPassword
+        x-descriptors:
+        - urn:alm:descriptor:com.tectonic.ui:password
       - description: Product version installed.
         displayName: Version
         path: version
