--- a/deploy/olm-catalog/dev/7.9.0/manifests/businessautomation-operator.7.9.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/dev/7.9.0/manifests/businessautomation-operator.7.9.0.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "false"
     containerImage: quay.io/kiegroup/kie-cloud-operator:7.9.0
-    createdAt: "2020-09-18 13:58:00"
+    createdAt: "2020-09-21 10:22:45"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat Decision Manager environments.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
     repository: https://github.com/kiegroup/kie-cloud-operator
@@ -17,7 +17,7 @@ metadata:
     operator-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: businessautomation-operator.7.9.0-dev-zgt7h8cxlm
+  name: businessautomation-operator.7.9.0-dev-r78qgfp5pr
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -303,6 +303,14 @@ spec:
           - update
           - watch
         - apiGroups:
+          - ""
+          resources:
+          - bindings
+          - endpoints
+          - podtemplates
+          verbs:
+          - list
+        - apiGroups:
           - apps
           resources:
           - deployments
@@ -375,6 +383,7 @@ spec:
           - image.openshift.io
           resources:
           - images
+          - imagetags
           - imagestreams
           - imagestreamimages
           - imagestreamtags
@@ -406,9 +415,11 @@ spec:
           - monitoring.coreos.com
           resources:
           - servicemonitors
+          - prometheusrules
           verbs:
           - get
           - create
+          - list
         - apiGroups:
           - operators.coreos.com
           resources:
@@ -443,7 +454,7 @@ spec:
   - operator
   labels:
     alm-owner-businessautomation: businessautomation-operator
-    operated-by: businessautomation-operator.7.9.0-dev-zgt7h8cxlm
+    operated-by: businessautomation-operator.7.9.0-dev-r78qgfp5pr
   links:
   - name: Product Page
     url: https://access.redhat.com/products/red-hat-process-automation-manager
@@ -546,5 +557,5 @@ spec:
   selector:
     matchLabels:
       alm-owner-businessautomation: businessautomation-operator
-      operated-by: businessautomation-operator.7.9.0-dev-zgt7h8cxlm
-  version: 7.9.0+zgt7h8cxlm
+      operated-by: businessautomation-operator.7.9.0-dev-r78qgfp5pr
+  version: 7.9.0+r78qgfp5pr
