--- a/deploy/olm-catalog/prod/7.9.0/manifests/businessautomation-operator.7.9.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/prod/7.9.0/manifests/businessautomation-operator.7.9.0.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "true"
     containerImage: registry.redhat.io/rhpam-7/rhpam-rhel8-operator:7.9.0
-    createdAt: "2020-09-18 13:58:00"
+    createdAt: "2020-09-21 10:22:45"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat Decision Manager environments.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
     repository: https://github.com/kiegroup/kie-cloud-operator
@@ -303,6 +303,14 @@ spec:
           - update
           - watch
         - apiGroups:
+          - ""
+          resources:
+          - bindings
+          - endpoints
+          - podtemplates
+          verbs:
+          - list
+        - apiGroups:
           - apps
           resources:
           - deployments
@@ -375,6 +383,7 @@ spec:
           - image.openshift.io
           resources:
           - images
+          - imagetags
           - imagestreams
           - imagestreamimages
           - imagestreamtags
@@ -406,9 +415,11 @@ spec:
           - monitoring.coreos.com
           resources:
           - servicemonitors
+          - prometheusrules
           verbs:
           - get
           - create
+          - list
         - apiGroups:
           - operators.coreos.com
           resources:
