[KIECLOUD-432] - kubernetes.KUBE_PING warning message on logs if the KUBERNETES_NAMESPACE is not set
Signed-off-by: spolti <fspolti@redhat.com>

--- a/config/7.9.0/common.yaml
+++ b/config/7.9.0/common.yaml
@@ -18,7 +18,7 @@ console:
                 - "[[.ApplicationName]]-[[.Console.Name]]"
               from:
                 kind: ImageStreamTag
-                namespace: openshift
+                namespace: "openshift"
                 name: "[[.Console.Image]]:[[.Console.ImageTag]]"
           #[[end]]
           - type: ConfigChange
